EPOS/Borland Delphi/Definition Files/Delphi XE3/Definitions.pas


  {Status}
    function VCS_StartRecorder(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_StartRecorder@12';
    function VCS_StopRecorder(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_StopRecorder@12';
    function VCS_ForceTrigger(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ForceTrigger@12';
    function VCS_IsRecorderRunning(KeyHandle: Longint; NodeID: Word; var pRunning: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_IsRecorderRunning@16';
    function VCS_IsRecorderTriggered(KeyHandle: Longint; NodeID: Word; var pTriggered: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_IsRecorderTriggered@16';

  {Data}
    function VCS_ReadChannelVectorSize(KeyHandle: Longint; NodeID: Word; var pVectorSize: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ReadChannelVectorSize@16';
    function VCS_ReadChannelDataVector(KeyHandle: Longint; NodeID: Word; ChannelNumber: Byte; pDataVectorBuffer: Pointer; VectorBufferSize: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ReadChannelDataVector@24';
    function VCS_ShowChannelDataDlg(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ShowChannelDataDlg@12';
    function VCS_ExportChannelDataToFile(KeyHandle: Longint; NodeID: Word; FileName: PAnsiChar; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ExportChannelDataToFile@16';

  {Advanced Functions}
    function VCS_ReadDataBuffer(KeyHandle: Longint; NodeID: Word; pDataBuffer: Pointer; BufferSizeToRead: Longint; var pBufferSizeRead: Longint; var pVectorStartOffset: Smallint; var pMaxNbOfSamples: Smallint; var pNbOfRecordedSamples: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ReadDataBuffer@36';
    function VCS_ExtractChannelDataVector(KeyHandle: Longint; NodeID: Word; ChannelNumber: Byte; pDataBuffer: Pointer; BufferSize: Longint; pDataVectorBuffer: Pointer; VectorBufferSize: Longint; VectorStartOffset: Smallint; MaxNbOfSamples: Smallint; NbOfRecordedSamples: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ExtractChannelDataVector@44';

{CAN Layer Functions}
    function VCS_SendCANFrame(KeyHandle: Longint; CobID: Word; Length: Word; pData: Pointer; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SendCANFrame@20';
    function VCS_ReadCANFrame(KeyHandle: Longint; CobID: Word; Length: Word; pData: Pointer; Timeout: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ReadCANFrame@24';
    function VCS_RequestCANFrame(KeyHandle: Longint; CobID: Word; Length: Word; pData: Pointer; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_RequestCANFrame@20';
    function VCS_SendNMTService(KeyHandle: Longint; NodeID: Word; CommandSpecifier: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SendNMTService@16';

const
     TEST : Word = 100;

{Communication}
    {Dialog Mode}
    DM_PROGRESS_DLG                 : LongInt   = 0;
    DM_PROGRESS_AND_CONFIRM_DLG     : LongInt   = 1;
    DM_CONFIRM_DLG                  : LongInt   = 2;
    DM_NO_DLG                       : LongInt   = 3;

{Configuration}
    {MotorType}
    MT_DC_MOTOR                     :Smallint   = 1;
    MT_EC_SINUS_COMMUTATED_MOTOR    :Smallint   = 10;
    MT_EC_BLOCK_COMMUTATED_MOTOR    :Smallint   = 11;

{Configuration}
    {SensorType}
    ST_UNKNOWN                      :Smallint   = 0;
    ST_INC_ENCODER_3CHANNEL         :Smallint   = 1;
    ST_INC_ENCODER_2CHANNEL         :Smallint   = 2;
    ST_HALL_SENSORS                 :Smallint   = 3;
    ST_SSI_ABS_ENCODER_BINARY       :Smallint   = 4;
    ST_SSI_ABS_ENCODER_GREY         :Smallint   = 5;
    ST_INC_ENCODER2_3CHANNEL        :Smallint   = 6;
    ST_INC_ENCODER2_2CHANNEL        :Smallint   = 7;
    ST_ANALOG_INC_ENCODER_3CHANNEL  :Smallint   = 8;
    ST_ANALOG_INC_ENCODER_2CHANNEL  :Smallint   = 9;

{In- and outputs}
    {Digital input configuration}
    DIC_NEGATIVE_LIMIT_SWITCH       :Word       = 0;
    DIC_POSITIVE_LIMIT_SWITCH       :Word       = 1;
    DIC_HOME_SWITCH                 :Word       = 2;
    DIC_POSITION_MARKER             :Word       = 3;
    DIC_DRIVE_ENABLE                :Word       = 4;
    DIC_QUICK_STOP                  :Word       = 5;
    DIC_GENERAL_PURPOSE_J           :Word       = 6;
    DIC_GENERAL_PURPOSE_I           :Word       = 7;
    DIC_GENERAL_PURPOSE_H           :Word       = 8;
    DIC_GENERAL_PURPOSE_G           :Word       = 9;
    DIC_GENERAL_PURPOSE_F           :Word       = 10;
    DIC_GENERAL_PURPOSE_E           :Word       = 11;
    DIC_GENERAL_PURPOSE_D           :Word       = 12;
    DIC_GENERAL_PURPOSE_C           :Word       = 13;
    DIC_GENERAL_PURPOSE_B           :Word       = 14;
    DIC_GENERAL_PURPOSE_A           :Word       = 15;

    {Digital output configuration}
    DOC_READY_FAULT                 :Word       = 0;
    DOC_POSITION_COMPARE            :Word       = 1;
    DOC_GENERAL_PURPOSE_H           :Word       = 8;
    DOC_GENERAL_PURPOSE_G           :Word       = 9;
    DOC_GENERAL_PURPOSE_F           :Word       = 10;
    DOC_GENERAL_PURPOSE_E           :Word       = 11;
    DOC_GENERAL_PURPOSE_D           :Word       = 12;
    DOC_GENERAL_PURPOSE_C           :Word       = 13;
    DOC_GENERAL_PURPOSE_B           :Word       = 14;
    DOC_GENERAL_PURPOSE_A           :Word       = 15;

    {Analog input configuration}
    AIC_ANALOG_CURRENT_SETPOINT     :Word       = 0;
    AIC_ANALOG_VELOCITY_SETPOINT    :Word       = 1;
    AIC_ANALOG_POSITION_SETPOINT    :Word       = 2;
    AIC_GENERAL_PURPOSE_H           :Word       = 8;
    AIC_GENERAL_PURPOSE_G           :Word       = 9;
    AIC_GENERAL_PURPOSE_F           :Word       = 10;
    AIC_GENERAL_PURPOSE_E           :Word       = 11;
    AIC_GENERAL_PURPOSE_D           :Word       = 12;
    AIC_GENERAL_PURPOSE_C           :Word       = 13;
    AIC_GENERAL_PURPOSE_B           :Word       = 14;
    AIC_GENERAL_PURPOSE_A           :Word       = 15;

    {Analog output configuration}
    AOC_GENERAL_PURPOSE_A           :Word       = 0;
    AOC_GENERAL_PURPOSE_B           :Word       = 1;

{Units}
    {VelocityDimension}
    VD_RPM                          :Byte       = $A4;

    {VelocityNotation}
    VN_STANDARD                     :Shortint   = 0;
    VN_DECI                         :Shortint   = -1;
    VN_CENTI                        :Shortint   = -2;
    VN_MILLI                        :Shortint   = -3;

{Operational mode}
    OMD_PROFILE_POSITION_MODE       :Shortint   = 1;
    OMD_PROFILE_VELOCITY_MODE       :Shortint   = 3;
    OMD_HOMING_MODE                 :Shortint   = 6;
    OMD_INTERPOLATED_POSITION_MODE  :Shortint   = 7;
    OMD_POSITION_MODE               :Shortint   = -1;
    OMD_VELOCITY_MODE               :Shortint   = -2;
    OMD_CURRENT_MODE                :Shortint   = -3;
    OMD_MASTER_ENCODER_MODE         :Shortint   = -5;
    OMD_STEP_DIRECTION_MODE         :Shortint   = -6;

{States}
    ST_DISABLED                     :Word       = 0;
    ST_ENABLED                      :Word       = 1;
    ST_QUICKSTOP                    :Word       = 2;
    ST_FAULT                        :Word       = 3;

{Homing mode}
    {Homing method}
    HM_ACTUAL_POSITION                              :Shortint   = 35;
    HM_NEGATIVE_LIMIT_SWITCH                        :Shortint   = 17;
    HM_NEGATIVE_LIMIT_SWITCH_AND_INDEX              :Shortint   = 1;
    HM_POSITIVE_LIMIT_SWITCH                        :Shortint   = 18;
    HM_POSITIVE_LIMIT_SWITCH_AND_INDEX              :Shortint   = 2;
    HM_HOME_SWITCH_POSITIVE_SPEED                   :Shortint   = 23;
    HM_HOME_SWITCH_POSITIVE_SPEED_AND_INDEX         :Shortint   = 7;
    HM_HOME_SWITCH_NEGATIVE_SPEED                   :Shortint   = 27;
    HM_HOME_SWITCH_NEGATIVE_SPEED_AND_INDEX         :Shortint   = 11;
    HM_CURRENT_THRESHOLD_POSITIVE_SPEED             :Shortint   = -3;
    HM_CURRENT_THRESHOLD_POSITIVE_SPEED_AND_INDEX   :Shortint   = -1;
    HM_CURRENT_THRESHOLD_NEGATIVE_SPEED             :Shortint   = -4;
    HM_CURRENT_THRESHOLD_NEGATIVE_SPEED_AND_INDEX   :Shortint   = -2;
    HM_INDEX_POSITIVE_SPEED                         :Shortint   = 34;
    HM_INDEX_NEGATIVE_SPEED                         :Shortint   = 33;

{Input Output PositionMarker}
    {PositionMarkerEdgeType}
    PET_BOTH_EDGES                  :Byte       = 0;
    PET_RISING_EDGE                 :Byte       = 1;
    PET_FALLING_EDGE                :Byte       = 2;

    //PositionMarkerMode}
    PM_CONTINUOUS                   :Byte       = 0;
    PM_SINGLE                       :Byte       = 1;
    PM_MULTIPLE                     :Byte       = 2;

{Input Output PositionCompare}
    {PositionCompareOperationalMode}
    PCO_SINGLE_POSITION_MODE        :Byte       = 0;
    PCO_POSITION_SEQUENCE_MODE      :Byte       = 1;

    {PositionCompareIntervalMode}
    PCI_NEGATIVE_DIR_TO_REFPOS      :Byte       = 0;
    PCI_POSITIVE_DIR_TO_REFPOS      :Byte       = 1;
    PCI_BOTH_DIR_TO_REFPOS          :Byte       = 2;

    {PositionCompareDirectionDependency}
    PCD_MOTOR_DIRECTION_NEGATIVE    :Byte       = 0;
    PCD_MOTOR_DIRECTION_POSITIVE    :Byte       = 1;
    PCD_MOTOR_DIRECTION_BOTH        :Byte       = 2;

{Data recorder}
    {Trigger type}
    DR_MOVEMENT_START_TRIGGER       :Byte       = 1;
    DR_ERROR_TRIGGER                :Byte       = 2;
    DR_DIGITAL_INPUT_TRIGGER        :Byte       = 4;
    DR_MOVEMENT_END_TRIGGER         :Byte       = 8;

{CanLayer Functions}
    NCS_START_REMOTE_NODE           :Word       = 1;
    NCS_STOP_REMOTE_NODE            :Word       = 2;
    NCS_ENTER_PRE_OPERATIONAL       :Word       = 128;
    NCS_RESET_NODE                  :Word       = 129;
    NCS_RESET_COMMUNICATION         :Word       = 130;

{Controller Gains}
  {EController}
    EC_PI_CURRENT_CONTROLLER                    :Word   = 1;
    EC_PI_VELOCITY_CONTROLLER                   :Word   = 10;
    EC_PI_VELOCITY_CONTROLLER_WITH_OBSERVER     :Word   = 11;
    EC_PID_POSITION_CONTROLLER                  :Word   = 20;
    EC_DUAL_LOOP_POSITION_CONTROLLER            :Word   = 21;

  {EGain (EC_PI_CURRENT_CONTROLLER)}
    EG_PICC_P_GAIN                              :Word   = 1;
    EG_PICC_I_GAIN                              :Word   = 2;

    {EGain (EC_PI_VELOCITY_CONTROLLER)}
    EG_PIVC_P_GAIN                              :Word   = 1;
    EG_PIVC_I_GAIN                              :Word   = 2;
    EG_PIVC_FEED_FORWARD_VELOCITY_GAIN          :Word   = 10;
    EG_PIVC_FEED_FORWARD_ACCELERATION_GAIN      :Word   = 11;

    {EGain (EC_PI_VELOCITY_CONTROLLER_WITH_OBSERVER)}
    EG_PIVCWO_P_GAIN                            :Word   = 1;
    EG_PIVCWO_I_GAIN                            :Word   = 2;
    EG_PIVCWO_FEED_FORWARD_VELOCITY_GAIN        :Word   = 10;
    EG_PIVCWO_FEED_FORWARD_ACCELERATION_GAIN    :Word   = 11;
    EG_PIVCWO_OBSERVER_THETA_GAIN               :Word   = 20;
    EG_PIVCWO_OBSERVER_OMEGA_GAIN               :Word   = 21;
    EG_PIVCWO_OBSERVER_TAU_GAIN                 :Word   = 22;

    {EGain (EC_PID_POSITION_CONTROLLER)}
    EG_PIDPC_P_GAIN                             :Word   = 1;
    EG_PIDPC_I_GAIN                             :Word   = 2;
    EG_PIDPC_D_GAIN                             :Word   = 3;
    EG_PIDPC_FEED_FORWARD_VELOCITY_GAIN         :Word   = 10;
    EG_PIDPC_FEED_FORWARD_ACCELERATION_GAIN     :Word   = 11;
